[package]
name = "configurator-xng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "staticlib" ]

[dependencies]
a653rs-router = { features = ["serde"], path = "../../a653rs-router" }
a653rs = { workspace = true, features = ["macros"] }
a653rs-xng = { workspace = true, features = ["panic_handler"] }
heapless = { workspace = true, features = ["serde"] }
log.workspace = true
postcard = { workspace = true, features = ["heapless"] } 
xng-rs-log.workspace = true
