[package]
name = "configurator"
version = "0.1.0"
edition = "2021"
description = "This is an example of how to configure the network partition using a sampling port"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
# TODO these determine which config is used. The config should instead be loaded from parameter data items without recompilation
# compile like this `cargo build -p configurator-linux --features=configurator/client`
client = [ ]
server = [ ]
local = [ ]
alt-local-client = []

[dependencies.a653rs]
workspace = true

[dependencies.a653rs-router]
features = [ "serde" ]
path = "../../a653rs-router"

[dependencies.postcard]
workspace = true
features = ["heapless"]

[dependencies.log]
version = "0"
