[package]
name = "echo-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-partition = { path = "../../network-partition" }
network-partition-linux = { path = "../../network-partition-linux" }
apex-echo = { path = "../../apex-echo" }
a653rs = { git = "https://github.com/DLR-FT/a653rs.git", branch = "main" }
a653rs-linux = { git = "https://github.com/DLR-FT/a653rs-linux.git", branch = "main" }
log = "0"
once_cell = "1.17"
postcard = "1.0"
heapless = "0.7"

[build-dependencies]
network-partition = { path = "../../network-partition", features = [ "serde", "std" ] }
network-partition-config = { path = "../../network-partition-config" }
serde_yaml = "0.9"
quote = "1"
proc-macro2 = "1"
